--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-
+    implementation 'com.google.android.material:material:1.0.0'
 }
