--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.farazandishehafagh.filmlistwithkotlin">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
+        android:name="com.farazandishehafagh.filmlistwithkotlin.BaseApplication"
         android:icon="@mipmap/ic_launcher_film"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_film"
