--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:name="com.farazandishehafagh.filmlistwithkotlin.BaseApplication"
+        android:name="com.farazandishehafagh.filmlistwithkotlin.KotlinBaseApplication"
         android:icon="@mipmap/ic_launcher_film"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_film"
